  - Refactor the markdown relative links processing
  - Make it easier to implement other CI services for GitLab
  - Group masters can create projects in group
  - Deprecate ruby 1.9.3 support
  - Only masters can rewrite/remove git tags
  - Add X-Frame-Options SAMEORIGIN to Nginx config so Sidekiq admin is visible
  - UI improvements
  - Case-insensetive search for issues
  - Update to rails 4.1

v 6.9.2
  - Revert the commit that broke the LDAP user filter

v 6.9.1
  - Fix scroll to highlighted line
  - Fix the pagination on load for commits page

v 6.9.0
  - Store Rails cache data in the Redis `cache:gitlab` namespace
  - Adjust MySQL limits for existing installations
  - Add db index on project_id+iid column. This prevents duplicate on iid (During migration duplicates will be removed)
  - Markdown preview or diff during editing via web editor (Evgeniy Sokovikov)
  - Give the Rails cache its own Redis namespace
  - Add ability to set different ssh host, if different from http/https
  - Fix syntax highlighting for code comments blocks
  - Improve comments loading logic
  - Stop refreshing comments when the tab is hidden
  - Improve issue and merge request mobile UI (Drew Blessing)
  - Document how to convert a backup to PostgreSQL
  - Fix locale bug in backup manager
  - Fix can not automerge when MR description is too long
  - Fix wiki backup skip bug
  - Two Step MR creation process
  - Remove unwanted files from satellite working directory with git clean -fdx
  - Accept merge request via API (sponsored by O'Reilly Media)
  - Add more access checks during API calls
  - Block SSH access for 'disabled' Active Directory users
  - Labels for merge requests (Drew Blessing)
  - Threaded emails by setting a Message-ID (Philip Blatter)

v 6.8.0
  - Ability to at mention users that are participating in issue and merge req. discussion